--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
 
     <div class="container">
-        <h1>Local Storage Denemeleri</h1>
+        <h1>Local Storage</h1>
+        <h3>Add/Remove/Update items</h3>
         <form id="myForm">
             <input type="text" id="input1">
-            <button id="btnEkle" type="submit">Click</button>
+            <button id="btnEkle" type="submit">Add item</button>
         </form>
-        <h2>Eklenen itemler</h2>
+        <h3>Items List</h3>
         <ul id="liste">
         </ul>
-        <button id="btnSil">Hepsini sil</button>
+        <button id="btnSil">Remove All</button>
     </div>
-
     <script src="script.js"></script>
 </body>
 
